Bug 325846 - crash when deleting a changed password entry
Summary: crash when deleting a changed password entry
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.10
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-10-10 13:28 UTC by farmboy0
Modified: 2013-10-23 20:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description farmboy0 2013-10-10 13:28:52 UTC
Application: kwalletmanager (1.10)
KDE Platform Version: 4.10.5 (Compiled from sources)
Qt Version: 4.8.4
Operating System: Linux 3.8.13-gentoo x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:
changed an existing password entry
deleted that entry from the tree with context menu
selected new entry kwallet asked if i want to save my changes
pressed enter selects the default yes and then crash

-- Backtrace:
Application: KDE Wallet Manager (kwalletmanager), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#6  isEmpty (this=0x20b4) at ../../include/QtCore/../../src/corelib/tools/qlist.h:99
#7  isEmpty (this=0x20b4) at ../../include/QtCore/../../src/corelib/tools/qlist.h:152
#8  QTreeWidgetItem::~QTreeWidgetItem (this=0x2348950, __in_chrg=<optimized out>) at itemviews/qtreewidget.cpp:1495
#9  0x000000000042d529 in KWalletEntryItem::~KWalletEntryItem (this=0x2348950, __in_chrg=<optimized out>) at /var/tmp/portage/kde-base/kwallet-4.10.5/work/kwallet-4.10.5/allyourbase.cpp:153
#10 0x000000000042350e in KWalletEditor::deleteEntry (this=0x214b650) at /var/tmp/portage/kde-base/kwallet-4.10.5/work/kwallet-4.10.5/kwalleteditor.cpp:813
#11 0x00007feed76b8d91 in QMetaObject::activate (sender=0x228f400, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffe7b41a40) at kernel/qobject.cpp:3539
#12 0x00007feed834a862 in QAction::triggered (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:277
#13 0x00007feed834aa4f in QAction::activate (this=0x228f400, event=<optimized out>) at kernel/qaction.cpp:1257
#14 0x00007feed8778809 in QMenuPrivate::activateCausedStack (this=0x2115300, causedStack=..., action=0x228f400, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1038
#15 0x00007feed877ea22 in QMenuPrivate::activateAction (this=0x2115300, action=0x228f400, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1130
#16 0x00007feed9147710 in KMenu::mouseReleaseEvent (this=0x2097030, e=0x7fffe7b42790) at /var/tmp/portage/kde-base/kdelibs-4.10.5-r1/work/kdelibs-4.10.5/kdeui/widgets/kmenu.cpp:464
#17 0x00007feed83a152c in QWidget::event (this=0x2097030, event=0x7fffe7b42790) at kernel/qwidget.cpp:8375
#18 0x00007feed877ffbb in QMenu::event (this=0x2097030, e=0x7fffe7b42790) at widgets/qmenu.cpp:2481
#19 0x00007feed8350cf4 in notify_helper (e=0x7fffe7b42790, receiver=0x2097030, this=0x1e17360) at kernel/qapplication.cpp:4562
#20 QApplicationPrivate::notify_helper (this=0x1e17360, receiver=0x2097030, e=0x7fffe7b42790) at kernel/qapplication.cpp:4534
#21 0x00007feed8356393 in QApplication::notify (this=<optimized out>, receiver=0x2097030, e=0x7fffe7b42790) at kernel/qapplication.cpp:4105
#22 0x00007feed9086486 in KApplication::notify (this=0x7fffe7b43330, receiver=0x2097030, event=0x7fffe7b42790) at /var/tmp/portage/kde-base/kdelibs-4.10.5-r1/work/kdelibs-4.10.5/kdeui/kernel/kapplication.cpp:311
#23 0x00007feed76a4f2c in QCoreApplication::notifyInternal (this=0x7fffe7b43330, receiver=0x2097030, event=0x7fffe7b42790) at kernel/qcoreapplication.cpp:946
#24 0x00007feed8351cc2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#25 QApplicationPrivate::sendMouseEvent (receiver=0x2097030, event=0x7fffe7b42790, alienWidget=0x0, nativeWidget=0x2097030, buttonDown=0x0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3173
#26 0x00007feed83cdd54 in QETWidget::translateMouseEvent (this=0x2097030, event=<optimized out>) at kernel/qapplication_x11.cpp:4450
#27 0x00007feed83cc4aa in QApplication::x11ProcessEvent (this=0x7fffe7b43330, event=0x7fffe7b42eb0) at kernel/qapplication_x11.cpp:3639
#28 0x00007feed83f3df2 in x11EventSourceDispatch (s=0x1e19920, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#29 0x00007feed3da56f3 in g_main_dispatch (context=0x1e10c30) at gmain.c:2539
#30 g_main_context_dispatch (context=0x1e10c30) at gmain.c:3075
#31 0x00007feed3da5a40 in g_main_context_iterate (dispatch=1, block=<optimized out>, context=0x1e10c30, self=<optimized out>) at gmain.c:3146
#32 g_main_context_iterate (context=0x1e10c30, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3083
#33 0x00007feed3da5b04 in g_main_context_iteration (context=0x1e10c30, may_block=1) at gmain.c:3207
#34 0x00007feed76d40b6 in QEventDispatcherGlib::processEvents (this=0x1e114a0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#35 0x00007feed83f3a8e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007feed76a3a62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007feed76a3cb7 in QEventLoop::exec (this=0x7fffe7b43240, flags=...) at kernel/qeventloop.cpp:204
#38 0x00007feed76a8ad5 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#39 0x000000000041a1f8 in main (argc=1, argv=0x7fffe7b43778) at /var/tmp/portage/kde-base/kwallet-4.10.5/work/kwallet-4.10.5/main.cpp:95

This bug may be a duplicate of or related to bug 299435.

Possible duplicates by query: bug 299435.

Reported using DrKonqi
Comment 1 Valentin Rusu 2013-10-12 20:30:47 UTC
Git commit d25fbcf98ac37b1129bcf6e2150dabe40fe5e5df by Valentin Rusu.
Committed on 12/10/2013 at 20:24.
Pushed by vrusu into branch 'master'.

Fix crash when deleting a "dirty" entry from the wallet
FIXED-IN:4.11

M  +2    -1    src/manager/kwalleteditor.cpp

http://commits.kde.org/kwallet/d25fbcf98ac37b1129bcf6e2150dabe40fe5e5df
Comment 2 Jekyll Wu 2013-10-13 00:48:46 UTC
(In reply to comment #1)
> FIXED-IN:4.11
> 
> M  +2    -1    src/manager/kwalleteditor.cpp

Valentin, did you mean to write "FIXED-IN: 4.12" ?  That commit is on the master branch so the bug can't be fixed in 4.11 series.