Fix crash when deleting a "dirty" entry from the wallet

BUG: 325846
FIXED-IN:4.11